--- a/Proof/AMapiPhone.app/Info.plist
+++ b/Proof/AMapiPhone.app/Info.plist
@@ -62,7 +62,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.autonavi.amap2</string>
+	<string>com.tencent.QQMusic</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -188,6 +188,11 @@
 	<string>C3320</string>
 	<key>ProductTG</key>
 	<string>Product</string>
+	<key>SBStarkLaunchModes</key>
+	<array>
+		<string>Default</string>
+		<string>Siri</string>
+	</array>
 	<key>SBUsesNetwork</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -337,6 +342,40 @@
 		<string>iPhone9,1</string>
 		<string>iPhone9,3</string>
 		<string>iPod7,1</string>
+	</array>
+	<key>UISupportedExternalAccessoryProtocols</key>
+	<array>
+		<string>com.ford.sync.prot0</string>
+		<string>com.smartdevicelink.prot0</string>
+		<string>com.smartdevicelink.prot1</string>
+		<string>com.smartdevicelink.prot2</string>
+		<string>com.smartdevicelink.prot3</string>
+		<string>com.smartdevicelink.prot4</string>
+		<string>com.smartdevicelink.prot5</string>
+		<string>com.smartdevicelink.prot6</string>
+		<string>com.smartdevicelink.prot7</string>
+		<string>com.smartdevicelink.prot8</string>
+		<string>com.smartdevicelink.prot9</string>
+		<string>com.smartdevicelink.prot10</string>
+		<string>com.smartdevicelink.prot11</string>
+		<string>com.smartdevicelink.prot12</string>
+		<string>com.smartdevicelink.prot13</string>
+		<string>com.smartdevicelink.prot14</string>
+		<string>com.smartdevicelink.prot15</string>
+		<string>com.smartdevicelink.prot16</string>
+		<string>com.smartdevicelink.prot17</string>
+		<string>com.smartdevicelink.prot18</string>
+		<string>com.smartdevicelink.prot19</string>
+		<string>com.smartdevicelink.prot20</string>
+		<string>com.smartdevicelink.prot21</string>
+		<string>com.smartdevicelink.prot22</string>
+		<string>com.smartdevicelink.prot23</string>
+		<string>com.smartdevicelink.prot24</string>
+		<string>com.smartdevicelink.prot25</string>
+		<string>com.smartdevicelink.prot26</string>
+		<string>com.smartdevicelink.prot27</string>
+		<string>com.smartdevicelink.prot28</string>
+		<string>com.smartdevicelink.prot29</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
